    to the top of all pages, just below the tab bar.
  * Add a new JAMWiki:Custom.css stylesheet.  Starting with JAMWiki 1.2
    System.css will be used for base CSS styles, while Custom.css should be
    used for site-specific customizations.
  * Move the system topics (BottomArea, LeftMenu, StyleSheet) to the
    JAMWiki: namespace (JAMWiki:Footer, JAMWiki:Sidebar, JAMWiki:System.css).
  * Support storing images directly in the database rather than on the
    filesystem (avhohlov2).
  * Store images by default in the JAMWiki file system directory, rather than
    the webapp root, to allow simpler setup and upgrades.
  * Support extensions to the JFlex parser for iframes, Facebook and Twitter.
    See http://jamwiki.org/wiki/en/Help:Tag_extensions for details.
  * Refactor caching.  The cache is now configured to use a percentage of heap
    rather than a fixed size to avoid possible OOM situations, configuration is
    now managed via the ehcache-jamwiki.xml file, and individual caches have
    been fine-tuned to optimize performance.
  * If setup finds an existing JAMWiki installation it will now prompt the user
    to restore the old configuration, and will then begin the automatic upgrade
    process if necessary.
  * Allow the table of contents to be hidden via a "show/hide" link.
  * Add support for the Mediawiki {{padleft:}} and {{padright:}} parser
    functions.  Usage: "{{padleft:string|amt|padString}}".
  * Enhance the #expr parser function to better match Mediawiki by supporting
    the order of operations and functions such as "round" and "trunc".
  * {{REVISIONMONTH}} is no longer padded ("4" instead of "04") while
    {{REVISIONMONTH1}} has been added in order to match Mediawiki behavior.
  * Allow page name and namespace magic words to specify the page to be
    operated on, instead of just the current page, to match Mediawiki behavior.
    Example: "{{PAGENAME:Template:Main Page}}".