@@ -163,15 +163,20 @@ admin.smtp.caption.host=Host
 admin.smtp.caption.pass=Password
 admin.smtp.caption.reply=Reply address
 admin.smtp.caption.user=Username
+admin.spam.caption.honeypotkey=Project Honeypot access key
 admin.spam.caption.recaptchaedit=Use Captcha for topic editing
 admin.spam.caption.recaptchaprivate=ReCAPTCHA private key
 admin.spam.caption.recaptchapublic=ReCAPTCHA public key
 admin.spam.caption.recaptcharegister=Use Captcha for user registration
+admin.spam.caption.usehoneypotfilter=Use Honeypot blacklist
 admin.spam.caption.usespamfilter=Enable spam filter
+admin.spam.help.honeypotkey=To use the Project Honeypot blacklist you must sign up for an <a href="http://www.projecthoneypot.org/httpbl_configure.php" target\="_blank">access key</a> with that project.
 admin.spam.help.recaptcha=Enable captcha support for combatting spam.  Captcha is a type of challenge-response test used in computing as an attempt to ensure that the response is generated by a person.  See <a href\="http\://code.google.com/apis/recaptcha/">http\://code.google.com/apis/recaptcha/</a> for additional details.
-admin.spam.help.recaptchakey=ReCAPTCHA public and private keys are required for using ReCAPTCHA and must be generated at <a href\="https\://www.google.com/recaptcha/admin/create">https\://www.google.com/recaptcha/admin/create</a>.
+admin.spam.help.recaptchakey=ReCAPTCHA public and private keys are required for using ReCAPTCHA and must be generated at <a href\="https\://www.google.com/recaptcha/admin/create" target\="_blank">https\://www.google.com/recaptcha/admin/create</a>.
+admin.spam.help.usehoneypotfilter=<a href="http://www.projecthoneypot.org/" target\="_blank">Project Honeypot</a> monitors the web to create a blacklist of IP addresses engaged in malicious behavior such as comment spamming.  JAMWiki uses the Project Honeypot blacklist to automatically block users identified as malicious from creating accounts, editing and uploading files.  Note that logged-in users will not be blocked, so if a user is incorrectly blocked (for example, if they are using a shared IP address) then a site administrator can create an account for that user to allow them to access the wiki.
 admin.spam.help.usespamfilter=The spam filter compares all edits against the patterns in the <code>/WEB-INF/classes/spam-blacklist.txt</code> file and blocks edits that match patterns from that file.
-admin.spam.message.invalidkeys=Captcha requires a valid ReCAPTCHA public and private key.  See <a href\="https\://www.google.com/recaptcha/admin/create">https\://www.google.com/recaptcha/admin/create</a>.
+admin.spam.message.invalidhoneypotkey=Use of the Project Honeypot blacklist requires a valid access key.  See <a href="http://www.projecthoneypot.org/httpbl_configure.php" target\="_blank">http://www.projecthoneypot.org/httpbl_configure.php</a> to create an access key.
+admin.spam.message.invalidkeys=Captcha requires a valid ReCAPTCHA public and private key.  See <a href\="https\://www.google.com/recaptcha/admin/create" target\="_blank">https\://www.google.com/recaptcha/admin/create</a>.
 admin.spam.option.always=Always
 admin.spam.option.never=Never
 admin.spam.option.unregistered=Un-registered users only
@@ -699,8 +704,9 @@ upload.error.nodirectory=Uploads not supported, no valid directory to upload int
 upload.help.destination=This field is optional and allows a name other than the source filename to be used for the uploaded file.  Note that filenames should always be given extensions (for example\: ".jpg" or ".txt").
 upload.title=File Upload
 userblock.caption.blockedby=The block was made by {0}.
+userblock.caption.honeypot=<b>Reason for block</b>: Your IP address ({0}) is on the <a href="http://www.projecthoneypot.org/" target\="_blank">Project Honeypot</a> blacklist.  This means that malicious activity has originated from your server, or from another server on your shared network.  If you feel that you have been incorrectly blacklisted please contact the site administrator.  Note that if you have an account on this wiki you can still login and edit normally.
 userblock.caption.end=Expiry of block\: {0}
-userblock.caption.overview=Your user name or IP address has been blocked from editing and uploading files.
+userblock.caption.overview=Your user name or IP address has been blocked from creating accounts, editing and uploading files.  If you feel that this block has been applied incorrectly please contact the site administrator.
 userblock.caption.reason=The reason given is\: <i>{0}</i>.
 userblock.caption.start=Start of block\: {0}
 userblock.caption.target=Intended blockee\: {0}
