@@ -678,7 +678,7 @@ upload.help.destination=This field is optional and allows a name other than the 
 upload.title=Subida de ficheros
 userblock.caption.blockedby=The block was made by {0}.
 userblock.caption.end=Expiry of block\: {0}
-userblock.caption.overview=Your user name or IP address has been blocked from editing and uploading files.
+userblock.caption.overview=Your user name or IP address has been blocked from creating accounts, editing and uploading files.  If you feel that this block has been applied incorrectly please contact the site administrator.
 userblock.caption.reason=The reason given is\: <i>{0}</i>.
 userblock.caption.start=Start of block\: {0}
 userblock.caption.target=Intended blockee\: {0}
